--- a/app.json
+++ b/app.json
@@ -37,7 +37,7 @@
        "value": "latest"
      }
   },
-  "website": "",
-  "repository": "",
+  "website": "https://github.com/privepeoel3/glad2",
+  "repository": "https://github.com/privepeoel3/glad2",
   "stack": "container"
  }
